refactor(daily): replace get(0) with getFirst() for better readability
- Updated list access to use getFirst() instead of get(0)
- Improved code clarity and maintainability
- Ensured consistent usage of modern Java list methods